--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
     "require-dev": {
         "mockery/mockery": "^1.4.4",
         "nesbot/carbon": "^2.66",
+        "orchestra/testbench": "^8.23",
         "orchestra/testbench-browser-kit": "^7.0 || ^8.0",
         "phpunit/phpunit": "^9.5",
         "spatie/laravel-translatable": "^6.0",
