--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0",
+        "laravel/pint": "^1.16",
         "mockery/mockery": "^1.4.4",
         "nesbot/carbon": "^2.66",
         "orchestra/testbench": "^8.23",
