--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "nesbot/carbon": "^2.66",
         "orchestra/testbench": "^8.23",
         "orchestra/testbench-browser-kit": "^7.0 || ^8.0",
-        "pestphp/pest": "^1.23",
+        "pestphp/pest": "^v2.9.4",
+        "pestphp/pest-plugin-drift": "^2.1",
         "spatie/laravel-translatable": "^6.0",
         "symfony/dom-crawler": "^6.0"
     },
