--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,10 @@
     "autoload": {
         "psr-4": {
             "Mlbrgn\\LaravelFormComponents\\": "src"
-        }
+        },
+        "files": [
+            "Helpers/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
