changed ServiceProvider location to Providers, to keep with the recommended structure of a laravel package

--- a/composer.json
+++ b/composer.json
@@ -78,7 +78,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Mlbrgn\\LaravelFormComponents\\FormComponentsServiceProvider"
+                "Mlbrgn\\LaravelFormComponents\\Providers\\FormComponentsServiceProvider"
             ]
         }
     }
