--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 build
 composer.lock
-vendor
+vendor/
 coverage
 .phpunit.result.cache
 .DS_Store
 .phpunit.cache
 /dist/.vite/manifest.json
-/node_modules
-/dist
+/node_modules/
+/dist/
