--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     "require": {
         "php": "^8.1 || ^8.2",
         "illuminate/support": "^9.0 || ^10.0 || ^11.0",
-        "symfony/http-foundation": "^6.0"
+        "symfony/http-foundation": "^6.0 || ^7.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0",
