--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "tinymce": "^7.1.0"
   },
