--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,15 +13,15 @@ jobs:
   test:
     name: Run tests
     runs-on: ubuntu-latest
-#    services:
-#      mysql:
-#        image: mariadb:10.5
-#        ports:
-#          - 3306:3306
-#        env:
-#          MARIADB_DATABASE: aksi_test
-#          MARIADB_USER: root
-#          MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: yes
+    services:
+      mysql:
+        image: mariadb:10.5
+        ports:
+          - 3306:3306
+        env:
+          MARIADB_DATABASE: mlbrgn_form_test
+          MARIADB_USER: root
+          MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: yes
 
     steps:
       - name: Checkout code
