--- a/.github/workflows/pest-type-coverage.yml
+++ b/.github/workflows/pest-type-coverage.yml
@@ -29,7 +29,7 @@ jobs:
         run: composer install --prefer-dist --no-progress --no-suggest --no-interaction
 
       - name: Run Pest Tests with Type Coverage
-        run: vendor/bin/pest --type-coverage --min=90
+        run: vendor/bin/pest --type-coverage --min=80
 
   pest-code-coverage:
     runs-on: ubuntu-latest
@@ -84,12 +84,12 @@ jobs:
         if: steps.js-and-css-cache.outputs.cache-hit != 'true'
         run: npm run build
 
-      - name: Prepare Laravel environment
-        run: |
-          cp .env.github .env
-          php artisan key:generate
-          php artisan migrate
-          php artisan passport:keys
+#      - name: Prepare Laravel environment
+#        run: |
+#          cp .env.github .env
+#          php artisan key:generate
+#          php artisan migrate
+#          php artisan passport:keys
 
       - name: Run Code Coverage
         env:
