--- a/.github/workflows/pest-type-coverage.yml
+++ b/.github/workflows/pest-type-coverage.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install Dependencies
         run: composer install --prefer-dist --no-progress --no-suggest --no-interaction
 
+      - name: Dump Autoload
+        run: composer dump-autoload
+
       - name: Run Pest Tests with Type Coverage
         run: vendor/bin/pest --type-coverage --min=80
 
