--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Install dependencies
         run: composer install --no-interaction --no-progress --prefer-dist
 
+      - name: Dump Autoload
+        run: composer dump-autoload
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
