--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,7 +39,10 @@ jobs:
         run: composer install --no-interaction --no-progress --prefer-dist
 
       - name: Dump Autoload
-        run: composer dump-autoload
+        run: composer dump-autoload -o
+
+      - name: List Files
+        run: ls -la
 
       - name: Setup Node
         uses: actions/setup-node@v4
