--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "passive-events-support": "^1.1.0",
     "tinymce": "^7.1.0"
   },
   "devDependencies": {
