--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         }
     ],
     "require": {
-        "php": "^8.1 || ^8.2",
+        "php": "^8.1 || ^8.2 || ^8.3",
         "barryvdh/laravel-ide-helper": "^3.0.0",
         "illuminate/support": "^9.0 || ^10.0 || ^11.0 || ^12.0",
         "symfony/http-foundation": "^6.0 || ^7.0"
